# Canary-Release-Manager

./: .dockerignore  .gitignore  Blog.md  Dockerfile  README.md  SUBMISSION_CHECKLIST.md  __init__.py  baseline.py  client.py  generate_review_artifacts.py  inference.py  models.py  openenv.yaml  pyproject.toml
review_artifacts/: artifact_index.md  artifact_manifest.json  benchmark_audit_summary.md  endpoint_contract_sample.json  expert_cautious_transcript.json  expert_phantom_hold_grader.json  hard_aggressive_grader.json  hard_aggressive_transcript.json  hard_cautious_grader.json  hard_cautious_transcript.json  hard_watch_window_hold_grader.json  hard_watch_window_hold_transcript.json  inference_stdout_fallback_sample.txt  openenv_validation_results.json  policy_benchmark_results.json  policy_seed_sweep_results.json  recovery_cautious_transcript.json  recovery_transient_hold_grader.json  scenario_variant_catalog.json
server/: Dockerfile  __init__.py  _compat.py  app.py  canary_environment.py  grader.py  policies.py  requirements.txt  scenarios.py
tests/: test_app.py  test_grader.py  test_inference.py  test_review_artifacts.py
